--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,11 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
+	        		<!-- other header elements
 		        	<li><a href="/about">About</a></li>
 	        		<li><a href="/cv">CV</a></li>
 	        		<li><a href="/blog">Blog</a></li>
+	        		-->
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,8 +23,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="mailto:bryan.kerster@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/bkerster">github.com/bkerster</a></li>
 				</ul>
 			</footer>
 		</body>
