--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,10 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
+	        		<li><a href="trimmed_resume.pdf">Resume</a></li>
 	        		<!-- other header elements
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
+	        		
 	        		<li><a href="/blog">Blog</a></li>
 	        		-->
 	    		</ul>
