--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-	        		<li><a href="{{ site.baseurl }}/pdfs/trimmed_resume.pdf">Resume</a></li>
+	        		<li><a href="{{ site.baseurl }}/pdfs/trimmed-resume.pdf">Resume</a></li>
 	        		<!-- other header elements
 		        	<li><a href="/about">About</a></li>
 	        		
